2006-11-30  Juanma Barranquero  <lekktu@gmail.com>

	* international/fontset.el (create-fontset-from-ascii-font)
	(create-fontset-from-fontset-spec, x-compose-font-name): Doc fixes.
	(fontset-name-p): Fix typo in docstring.

	* progmodes/cc-cmds.el (c-indent-exp): Fix typo in docstring.

2006-11-30  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* ps-bdf.el : Fix maintainer email.

	* ps-mule.el : Fix maintainer email.  Define functions for Emacs 20
	compatibility.

	* ps-print.el : Fix maintainer email.  Define functions for Emacs 20 &
	21 compatibility.
	(ps-print-quote): Replace '?\s' by '?\ ' to keep compatibility with
	Emacs 20 & 21.

2006-11-29  J.D. Smith  <jdsmith@as.arizona.edu>

	* progmodes/idlwave.el (idlwave-auto-fill): Remove
	paragraph-start let to prevent auto-fill giving up.

2006-11-28  Juanma Barranquero  <lekktu@gmail.com>

	* vt100-led.el (led-state): Fix typo in previous change.

2006-11-27  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* emacs-lisp/easy-mmode.el (easy-mmode-define-navigation): Fix
	interactive spec of the functions getting defined to make them
	work as documented.

2006-11-28  Chong Yidong  <cyd@stupidchicken.com>

	* startup.el (fancy-splash-screens): Hide initial splash buffer.

2006-11-28  Kim F. Storm  <storm@cua.dk>

	* icomplete.el (icomplete-tidy, icomplete-exhibit): Check that
	icomplete-mode is enabled.

2006-11-28  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org.el (require): Require gnus-sum during compilation
	to avoid problem with a macro call.

2006-11-28  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/authors.el (authors-aliases): Add new alias.

	* progmodes/fortran.el (fortran-font-lock-keywords-4): Add `min'.
	(fortran-window-create-momentarily): Do not need string-to-char.

2006-11-28  Richard Stallman  <rms@gnu.org>

	* emacs-lisp/bytecomp.el (byte-compile-get-constant):
	Replace incorrect use of assoc-default with a loop.

	* term.el (term-exec-1): Set envvar INSIDE_EMACS.
